--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,32 @@
-body {
+/* reset */
+div, p {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a { 
+  text-decoration: none;
+  color: #ccc;
+}
+
+a:visited {
+  color: #ccc;
+}
+
+
+body {
+  color: #ccc;
+  margin: 0;
+  font-family: 'Roboto Slab', serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  min-width: 100vw;
+  min-height: 100vh;
+  overflow-y: scroll;
+  overflow-y: hidden;
+}
+
+/* set a rem */
+html {
+  font-size: 12px;
 }
